Fix HTML formatting and update image paths

--- a/activite.html
+++ b/activite.html
@@ -16,7 +16,7 @@
 
 <h3>Étape 2</h3>
 <p>Taper dans le cmd : <code>git version</code></p>
-<img src="image/Capture0.PNG" alt="git version">
+<img src="images/Capture0.PNG" alt="git version">
 
 <p>Si la commande affiche une version, Git est déjà installé. Sinon, installer Git :</p>
 
@@ -40,24 +40,24 @@ git config --global user.email prenom.nom@example.com
 
 <h3>Étape 2</h3>
 <p>Créer un nouveau dépôt</p>
-<img src="image/Capture.PNG" alt="nouveau dépôt GitHub">
+<img src="images/Capture.PNG" alt="nouveau dépôt GitHub">
 
 <h3>Étape 3</h3>
 <p>Nommer le répertoire : <strong>Activité-Prénom</strong></p>
 
 <h3>Étape 4</h3>
 <p>Créer un fichier nommé <strong>activiter.md</strong></p>
-<img src="image/Capture 2.PNG" alt="création fichier">
+<img src="images/Capture 2.PNG" alt="création fichier">
 
 <h3>Étape 5</h3>
 <p>Copier la phrase suivante dans le fichier :<br>
 <code>Je m’appelle</code><br>puis effectuer un commit.</p>
-<img src="image/Capture3.PNG" alt="commit fichier">
-<img src="image/Capture4.PNG" alt="commit message">
+<img src="images/Capture3.PNG" alt="commit fichier">
+<img src="images/Capture4.PNG" alt="commit message">
 
 <h3>Étape 6</h3>
 <p>Récupérer l'URL de votre dépôt</p>
-<img src="image/Capture5.PNG" alt="URL dépôt">
+<img src="images/Capture5.PNG" alt="URL dépôt">
 
 <h3>Étape 7</h3>
 <p>Cloner votre dépôt :</p>
@@ -106,3 +106,4 @@ git show
 
 </body>
 </html>
+
