Fix HTML structure and update content

--- a/activite.html
+++ b/activite.html
@@ -43,7 +43,7 @@ git config --global user.email prenom.nom@example.com
 <img src="images/Capture.PNG" alt="nouveau dépôt GitHub">
 
 <h3>Étape 3</h3>
-<p>Nommer le répertoire : <strong>Activité-Prénom</strong></p>
+<p>Nommer le répertoire : <strong>activite-prenom</strong></p>
 
 <h3>Étape 4</h3>
 <p>Créer un fichier nommé <strong>activiter.md</strong></p>
@@ -106,4 +106,5 @@ git show
 
 </body>
 </html>
+
 
